--- a/reinforce-share-parent/pom.xml
+++ b/reinforce-share-parent/pom.xml
@@ -3,19 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.yyok.reinforce</groupId>
+        <artifactId>reinforce-parent</artifactId>
+        <version>1.0.1</version>
+    </parent>
 
-    <groupId>com.yyok.reinforce</groupId>
-    <artifactId>reinforce-parent</artifactId>
+    <groupId>com.yyok.std</groupId>
+    <artifactId>reinforce-share-parent</artifactId>
     <version>1.0.1</version>
-
     <packaging>pom</packaging>
-    <name>AI-AGI-BUZ</name>
-    <modules>
-        <module>reinforce-share-parent</module>
-        <module>reinforce-bin-parent</module>
-        <module>reinforce-api-parent</module>
-    </modules>
-
+    <name>AI-AGI-BUZ-SHARE</name>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
